# magma-core

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: clippy.yml  optimizer.yml  rust.yml
artifacts/: checksums.txt  magma_core.wasm
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  rebalance.rs
scripts/: deploy.sh  deposit.sh  instantiate.sh  mainnet.sh  plot_price_function.py  rebalance.sh  testnet.sh  update-microservice-types.sh  update-types.sh
src/: constants.rs  contract.rs  error.rs  execute.rs  lib.rs  mock.rs  msg.rs  query.rs  state.rs  utils.rs
