[package]
name = "magma-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

cosmwasm-std = { version = "2.1.3" }
serde_derive = "1.0.209"
cw-storage-plus = "2.0.0"
thiserror = "1"

# schemars = "0.8.20"
cosmwasm-schema = "2.1.3"
osmosis-std = "0.25.0"
cw-utils = "2.0.0"

cw20-base = { version = "2.0.0", features = ["library"] }
cw20 = "2.0.0"

readonly = "0.2.12"

[dev-dependencies]
cw-multi-test = "2.1.1"
osmosis-test-tube = "25.0.0"
