[package]
name = "magma-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.7", features = [] }
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
cw-storage-plus = "1.2.0"
thiserror = "1"

# schemars = "0.8.20"
cosmwasm-schema = "1.5.7"
osmosis-std = "0.25.0"
cw-utils = "1.0.3"

cw20-base = { version = "1.1.2", features = ["library"] }
cw20 = "1.1.2"

readonly = "0.2.12"

[dev-dependencies]
cw-multi-test = "1.2.0"
osmosis-test-tube = "25.0.0"
