[package]
name = "magma-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.7", features = [] }
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
cw-storage-plus = "1.2.0"
thiserror = "1"

# We make dev dependencies optional to also allow them during fuzzing #
# cw-multi-test = { version = "1.2.0", optional = true } #
osmosis-test-tube = { version = "25.0.0", optional = true }

# schemars = "0.8.20"
cosmwasm-schema = "2.2.0"
osmosis-std = "0.25.0"
cw-utils = "1.0.3"

cw20-base = { version = "1.1.2", features = ["library"] }
cw20 = "1.1.2"

readonly = "0.2.12"
anyhow = "1.0.89"

[profile.release]
overflow-checks = true

[features]
fuzzing = ["osmosis-test-tube"]

[dev-dependencies]
osmosis-test-tube = "25.0.0"
