[package]
name = "magma-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
osmosis-test-tube = "25.0.0"

[dependencies.magma-core]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "rebalance"
path = "fuzz_targets/rebalance.rs"
test = false
doc = false
bench = false

